[tool.poetry]
name = "fetch-ai + deepseek"
version = "0.1.0"
description = ""
authors = ["devcode8 <devccode8@gmail.com>"]
readme = "README.md"
packages = [{include = "fetch"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain-community = "^0.3.16"
langchain = "^0.3.17"
uagents = "^0.19.0"
together = "^1.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
